--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,7 +1,28 @@
-#intro-bk {
-    background: url(pretty-backgrounds.jpg);
+#intro {
+    background: url(../images/intro.jpg) 50% 0 fixed;
+    height: auto;
+    margin: 0 auto;
+    width: 100%;
+    position: relative;
+    box-shadow: 0 0 50px rgba(0,0,0,0.8);
+    padding: 250px 0;
 }
-
-.test {
-  color: red;
+#home {
+    background: url(../images/home.jpg) 50% 0 fixed;
+    height: auto;
+    margin: 0 auto;
+    width: 100%;
+    position: relative;
+    box-shadow: 0 0 50px rgba(0,0,0,0.8);
+    padding: 200px 0;
+}
+#about {
+    background: url(../images/about.jpg) 50% 0 fixed;
+    height: auto;
+    margin: 0 auto;
+    width: 100%;
+    position: relative;
+    box-shadow: 0 0 50px rgba(0,0,0,0.8);
+    padding: 250px 0;
+    color: #fff;
 }
