--- a/static/css/scrolling-nav.css
+++ b/static/css/scrolling-nav.css
@@ -33,7 +33,7 @@ html {
     margin-bottom: 0;
     border-bottom: 1px solid rgba(255,255,255,.3);
     text-transform: uppercase;
-    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: ;
     background-color: #000;
 }
 
