--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,5 +1,5 @@
 body {
-  font-family:sans-serif;
+  font-family: 'rubiklight';
 }
 
 /** Sections parallax backgroud **/
@@ -22,7 +22,7 @@ body {
     padding: 100px 0;
 }
 #contact {
-    background: url(../images/about.jpg) 50% 0 fixed;
+    background: url(../images/home.jpg) 50% 0 fixed;
     height: 100vh;
     margin: 0 auto;
     width: 100%;
@@ -38,8 +38,22 @@ body {
 }
 
 .brand-heading {
-  font-size: 40px;
+  font-family: 'rubikbold';
+  font-size: 60px;
   color: white;
+  text-transform: uppercase;
+}
+
+.intro {
+  text-align: center;
+  color: #fff;
+
+}
+
+.intro .intro-text {
+  font-size: 25px;
+  text-transform: uppercase;
+  font-family: 'rubikmedium';
 }
 
 .btn-circle {
@@ -166,17 +180,4 @@ body {
         -moz-transform: scale(1);
         transform: scale(1);
     }
-}
-
-.intro {
-  text-align: center;
-  color: #fff;
-}
-
-.intro .brand-heading {
-  font-size: 50px;
-}
-
-.intro .intro-text {
-  font-size: 25px;
 }
