--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -13,7 +13,7 @@ body {
     padding: 250px 0;
 }
 #about {
-    background: url(../images/home.jpg) 50% 0 fixed;
+    background: url() 50% 0 fixed;
     height: 100vh;
     margin: 0 auto;
     width: 100%;
@@ -22,7 +22,7 @@ body {
     padding: 100px 0;
 }
 #contact {
-    background: url(../images/home.jpg) 50% 0 fixed;
+    background: url(../images/background.png) 50% 0 fixed;
     height: 100vh;
     margin: 0 auto;
     width: 100%;
@@ -180,4 +180,32 @@ body {
         -moz-transform: scale(1);
         transform: scale(1);
     }
+}
+
+.text-center {
+  text-align: center;
+}
+
+.btn {
+    border-radius: 0;
+    text-transform: uppercase;
+    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-weight: 400;
+    -webkit-transition: all .3s ease-in-out;
+    -moz-transition: all .3s ease-in-out;
+    transition: all .3s ease-in-out;
+}
+
+.btn-default {
+    border: 1px solid #42dca3;
+    color: #42dca3;
+    background-color: transparent;
+}
+
+.btn-default:hover,
+.btn-default:focus {
+    border: 1px solid #42dca3;
+    outline: 0;
+    color: #000;
+    background-color: #42dca3;
 }
