--- a/static/css/scrolling-nav.css
+++ b/static/css/scrolling-nav.css
@@ -7,7 +7,7 @@
 body {
     width: 100%;
     height: 100%;
-    background: #1e3d54;
+    background: #626262;
     color: white;
 }
 
@@ -105,7 +105,7 @@ html {
     .navbar-custom.top-nav-collapse {
         padding: 0;
         border-bottom: 1px solid rgba(255,255,255,.3);
-        background: #1e3d54;
+        background: #424445;
     }
 }
 
