--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -14,13 +14,26 @@ body {
 }
 #about {
     background: url() 50% 0 fixed;
-    height: 60vh;
+    height: 70vh;
     margin: 0 auto;
     width: 100%;
     position: relative;
     box-shadow: 0 0 50px rgba(0,0,0,0.8);
     padding: 100px 0;
 }
+#projects {
+  height: 80vh;
+  display:block;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 70px 0;
+  text-align: center;
+}
+
+.header {
+  padding-bottom: 15px;
+}
+
 #contact {
     background: url(../images/background.png) 50% 0 fixed;
     height: 100vh;
